# term_gfx

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: game_of_life.rs  image.rs  sandbox.rs
src/: app.rs  color.rs  event.rs  framebuffer.rs  lib.rs  profiler.rs  renderer.rs  term.c
