[package]
name = "term_gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profiling = []

[build-dependencies]
cc = "1.0.95"

[dependencies]
ctrlc = "3.4.4"
image = "0.25.1"
lazy_static = "1.4.0"
term_size = "0.3.2"
